2006-06-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/main.py:
	  Do not fail on SyntaxError with Python 2.3.

	* tools/hide:
	* tools/list-glade:
	* tools/list-py:
	  New files.

	* tools/add-changelog:
	* tools/exec:
	* tools/profile:
	* tools/py.test:
	* tools/pydoc:
	* tools/pyenchant:
	* tools/pylint:
	* tools/status:
	* tools/translate:
	* tools/versions:
	  Revised.

2006-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/headers/microdvd.txt:
	* lib/gaupol/base/file/microdvd.py:
	* lib/gaupol/base/file/test/test_init.py:
	  Added support for MicroDVD headers.

2006-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialog/spellcheck.py:
	  Don't let amount of replacements exceed conf.spell_check.max_repl.

	* lib/gaupol/gtk/util/conf.py:
	  New option: spell_check.max_repl.

2006-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/releasing.txt:
	* po/README.translators:
	  Updated.

	* lib/gaupol/test/__init__.py:
	  Changed _SUBRIP_TEXT and _MICRODVD_TEXT.

2006-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/formats/ass.notes:
	* doc/formats/mdvddoc.html:
	* doc/formats/microdvd.notes:
	* doc/formats/mpl2.notes:
	* doc/formats/ssa.notes:
	* doc/formats/subrip.notes:
	* doc/formats/subviewer2.notes:
	  Renamed.

2006-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/formats/COPYING:
	* doc/formats/README:
	* doc/formats/ass.sample:
	* doc/formats/ass.txt:
	* doc/formats/microdvd.html:
	* doc/formats/microdvd.sample:
	* doc/formats/microdvd.txt:
	* doc/formats/mpl2-eng.html:
	* doc/formats/mpl2.sample:
	* doc/formats/mpl2.txt:
	* doc/formats/ssa.sample:
	* doc/formats/ssa.txt:
	* doc/formats/subrip.sample:
	* doc/formats/subrip.txt:
	* doc/formats/subviewer2.sample:
	* doc/formats/subviewer2.txt:
	  Added samples. Reviewed notes.

	* lib/gaupol/gtk/delegate/guiinit.py:
	* lib/gaupol/gtk/dialog/find.py:
	  Minor fixes.

2006-06-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialog/find.py: